fix: remove compiled files for clean Railway build